@@ -20,6 +20,7 @@ ViSP 2.6.2 (under development)
      - [13678] Cannot build all the examples if no display capability is 
 	       available
      - [13679] GDI not detected on Windows 7 (64 bit) with Visual C++ Express 2010
+     - [13689] Memory leaks in jpeg reader: vpImageIo::readJPEG()
 	
 ----------------------------------------------
 ViSP 2.6.1 (released October 20th, 2011)
